syntax = "proto3";

package grail.participant.v1;

import "google/api/resource.proto";
import "google/type/date.proto";

option go_package = "github.com/TastyPi/grail-interview/api/participant";

// Resource representing a participant in the trial.
message Participant {
  option (google.api.resource) = {
    type: "grail.com/Participant"
    pattern: "participants/{participant}"
  };

  // The name for this participant resource.
  // 
  // Note this is not the name of the *participant* but the name of the
  // *resource*. See given_name and family_name for the participant's name and
  // https://aip.dev/122#fields-representing-resource-names for an explanation.
  string name = 1;

  // The participant's given name.
  string given_name = 2;

  // The participant's family name.
  string family_name = 3;

  // The date the participant was born.
  google.type.Date birth_date = 4;

  // The participant's phone number.
  string phone_number = 5;

  // The participant's physical address.
  string address = 6;
}
